# TAMS-Planar-Surface-Based-Perception

./: CMakeLists.txt  README.md
abstract_planar_segment/: CMakeLists.txt
abstract_planar_segment/include/abstract_planar_segment/: abstract_planar_segment.h
abstract_planar_segment/src/: abstract_planar_segment.cc
apps/: CMakeLists.txt
apps/config/: BremenCityMap.ini  CrashedCarParkMap.ini  T-Boxes.ini  brl.ini  campus.ini  copter.ini  crashedCarPark.ini  experimental.ini  hannover2_sick.ini  indoorHokuyo.ini  lab.ini  mfi.ini  pmd.ini  ps_alrf_halfdeg_vfov180.ini  riegl.ini  scrapYard.ini  tams.ini  uni_koblenz.ini
apps/include/application_options_manager/: application_options_manager.h
apps/src/: application_options_manager.cpp  area_benchmark.cpp  covariance_matrix_feature.cpp  egi.cpp  loop_detection.cpp  map_merging.cpp  map_segmentation.cpp  octree_planar_segmentation.cpp  planar_segmentation.cpp  polygonization.cpp  registration.cpp  segments_descriptor.cpp  soft.cpp
cmake/: CGAL.cmake  PCL.cmake
common/: CMakeLists.txt
common/include/common/: common.h  planar_patch.h  rgb.h  sensor_parameters.h  subwindow.h
common/src/: common.cc
data_acquisition/: CMakeLists.txt
data_acquisition/hokuyo/: CMakeLists.txt
data_acquisition/hokuyo/include/hokuyo/: hokuyo.h
data_acquisition/hokuyo/src/: hokuyo.cpp
data_acquisition/ptu/: CMakeLists.txt
data_acquisition/ptu/include/ptu/: cpiver.h  linuxser.h  opcodes.h  ptu.h
data_acquisition/ptu/src/: linuxser.cpp  main.cpp  ptu.cpp
data_acquisition/ptulaser/: CMakeLists.txt
data_acquisition/ptulaser/include/ptulaser/: ptulaser.h
data_acquisition/ptulaser/src/: main.cpp  node.cpp  ptulaser.cpp
fftw_correlate/: CMakeLists.txt
fftw_correlate/include/fftw_correlate/: fftw_correlate.h  softFFTWCorrelateReal.h
fftw_correlate/src/: fftw_correlate.cpp  softFFTWCorrelateReal.c
intensity/histogram/: CMakeLists.txt
intensity/histogram/include/intensity_histogram/: intensity_histogram.h
intensity/histogram/src/: intensity_histogram.cc
intensity/sift/: CMakeLists.txt
intensity/sift/src/: intensity_sift.cc
leap_detection/: CMakeLists.txt
leap_detection/include/leap_detection/: leap_detection.h
leap_detection/src/: leap_detection.cc  leap_detection.cpp
loop_detector/: CMakeLists.txt
loop_detector/include/loop_detector/: loop_detector.h
loop_detector/src/: loop_detector.cc
planar_segments_matcher/: CMakeLists.txt
planar_segments_matcher/include/planar_segments_matcher/: correspondence_pairs.h  correspondences.h  matcher_parameters.h  one_pair_tester.h  solution.h  spherical_correlation_maximizer.h  two_pairs_tester.h
planar_segments_matcher/src/: correspondence_pairs.cc  correspondences.cc  one_pair_tests.cc  spherical_correlation_maximizer.cc
polygonization/include/alpha_shapes/: alpha_shapes_polygonizer.hh
polygonization/include/common/: polygonizer_attributes.hh  polygonizer_interface.hh  polygonizer_utils.hh
polygonization/include/convex/: convex_polygonizer.hh
polygonization/src/alpha_shapes/: alpha_shapes_polygonizer.cc
polygonization/src/common/: polygonizer_utils.cc
polygonization/src/convex/: convex_polygonizer.cc
registration/: CMakeLists.txt  registration.doxyfile
registration/include/registration/: registration.h  registration_parameters.h
registration/src/: registration.cc
segmentation/: CMakeLists.txt
segmentation/hybrid_region_growing/: CMakeLists.txt
segmentation/hybrid_region_growing/include/hybrid_region_growing/: hybrid_region_growing.h  hybrid_region_growing_parameters.h
segmentation/hybrid_region_growing/src/: hybrid_region_growing.cc  main.cpp
segmentation/octree_region_growing_segmentation/: CMakeLists.txt
segmentation/octree_region_growing_segmentation/include/octree_region_growing_segmentation/: octree_region_growing_segmentation.h  octree_region_growing_segmentation_parameters.h
segmentation/octree_region_growing_segmentation/src/: area_benchmark.cc  octree_region_growing_segmentation.cc
segmentation/pcl_region_growing/: CMakeLists.txt
segmentation/pcl_region_growing/include/pcl/segmentation/impl/: region_growing.hpp
segmentation/pcl_region_growing/src/: main.cpp
segmentation/region_growing_segmentation/: CMakeLists.txt
segmentation/region_growing_segmentation/include/region_growing_segmentation/: region_growing_segmentation.h  region_growing_segmentation_parameters.h
segmentation/region_growing_segmentation/include/region_growing_segmentation/impl/: region_growing_segmentation.hpp
segmentation/region_growing_segmentation/src/: region_growing_segmentation.cpp
segmentation/subwindow_region_growing/: CMakeLists.txt
segmentation/subwindow_region_growing/include/subwindow_region_growing/: subwindow_region_growing.h  subwindow_region_growing_parameters.h
segmentation/subwindow_region_growing/src/: main.cpp  subwindow_region_growing.cc
segments_area/: CMakeLists.txt
segments_area/include/segments_area/: segments_area.h
segments_area/src/: segments_area.cc
segments_descriptor/: CMakeLists.txt  clean
segments_descriptor/include/segments_descriptor/: segments_descriptor.h
segments_descriptor/include/segments_descriptor/impl/: segments_descriptor.hpp
segments_descriptor/src/: segments_descriptor.cpp
utils/: CMakeLists.txt
utils/src/: boundingbox.cpp  brl_outlier_remove.cpp  cloud_look_through.cpp  hann2CoorTransfer.cpp  icp.cpp  jacobs_to_organized.cpp  lefthand2righthand.cpp  m2mm.cpp  map_browser.cpp  marching_cube.cpp  max_range.cpp  mm2m.cpp  odometry_registration.cpp  organized2unorganized.cpp  origin2nan.cpp  pcd2depth.cpp  pcd2ply.cpp  pcd_viewer.cpp  pcl_icp.cpp  pcl_icpn.cpp  pcl_region_growing.cpp  remove_nans.cpp  setupSimu.cpp  show.cpp  show_pair_with_pose.cpp  sphere.cpp  voxel_downsampling.cpp
