file( GLOB list "*" )
foreach( sub_entry ${list} )
  if( IS_DIRECTORY ${sub_entry} )
    if( EXISTS ${sub_entry}/CMakeLists.txt )
      add_subdirectory( ${sub_entry} )
      link_directories( ${sub_entry}/lib )
      message( STATUS "Configuring  ${sub_entry} xiao" )
    endif()
  endif()
endforeach()